# FMI

./: README.md  temaseminar.py
AA/: temaseminar
AA/tema1/: evolutie.txt
AA/tema3/: monotonia.py  pct_fata_poligon.py  punct_poligon.py
AA/tema4/: intersectii_semiplane.py  muchii_ilegale.py  pozitie_triunghi.py
AF/CRACIUN - Florin/: CMakeLists.txt  acoperire_convexa.cpp  activitati.py  apm2kruskal.cpp  bipartit.cpp  building_teams.py  catun.py  ccneorientat.cpp  clustering.cpp  colocviuex1.cpp  colocviuex2.cpp  colocviuex3.cpp  comp_tare_conexe.cpp  critical_path.cpp  dfs.py  dijkstra.cpp  ek.cpp  euler.cpp  ex6.py  ffek.cpp  fill.cpp  kruskal.cpp  lcs.cpp  main.cpp  nature_reserve.cpp  pct_critice.cpp  prim.cpp  prim2.cpp  probl3.cpp  sortTop.cpp  strazi.cpp  submerging_islands.py
ASC/: Lab1.txt  comp.sh  curs1.txt  informatii.txt
BD/: README.md  craciun_florin_tema2.sql  craciun_florin_tema3.sql  ex1.sql  lab1.sql  lab2.sql
MDS/: mds.md
POO/: Complex.cpp  IntList.cpp  IntList.h  IntVector.cpp  IntVector.h  MyFile.cpp  MyFile.h  README.md  lab1.1.cpp  lab1.2.cpp  lab4.1.cpp  lab6.1.cpp  lab6.2.cpp  lab7.1.cpp  lab7.4.cpp  lab7.5.cpp
PS/: Proiect PS 241 Florin Craciun Milosi Elias.docx  Proiect PS Florin Craciun Milosi Elias.R
Python/: 141_pd_fazan_O(n)_dictionar.py  palab1.py
RC/: joi.pkt  lab2.pkt  model.pkt  model2.pkt  topologie1.pkt  topologie2.pkt
SD/: Tema1.cpp
SO/: main.c
TW/: README.md
lab1/: intervale.py
tema1/: ex1.py  input.txt
tema2/: poligon_stelat.py  roby.py  test.py  test_de_orientare.py
tema4/: punct_semiplane.py
(+291 files in other folders)
