cmake_minimum_required(VERSION 3.26)
project(CRACIUN___Florin)

set(CMAKE_CXX_STANDARD 14)

add_executable(CRACIUN___Florin
        apm2kruskal.cpp
        bipartit.cpp
        ccneorientat.cpp
        clustering.cpp
        comp_tare_conexe.cpp
        critical_path.cpp
        dijkstra.cpp
        ek.cpp
        euler.cpp
        ffek.cpp
        fill.cpp
        kruskal.cpp
        lcs.cpp
        main.cpp
        nature_reserve.cpp
        pct_critice.cpp
        prim.cpp
        prim2.cpp
        probl3.cpp
        sortTop.cpp
        strazi.cpp
        colocviuex2.cpp
        colocviuex3.cpp
        colocviuex1.cpp
        acoperire_convexa.cpp)
